ExtractFix_dataset/docker/jasper/testcases/cve_2016_8691/ubsan.txt
jpc_dec.c:1196:18: runtime error: division by zero
jpc_dec.c:1197:5: runtime error: division by zero
